--- a/Inventory/Inventory.csproj
+++ b/Inventory/Inventory.csproj
@@ -47,6 +47,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FindCustomer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FindCustomer.Designer.cs">
+      <DependentUpon>FindCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="InventoryDataSet10.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>InventoryDataSet10.xsd</DependentUpon>
+    </Compile>
     <Compile Include="InventoryDataSet2.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -189,6 +200,9 @@
     <Compile Include="Master\Tax.Designer.cs">
       <DependentUpon>Tax.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="FindCustomer.resx">
+      <DependentUpon>FindCustomer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="InvoiceGenerator.resx">
       <DependentUpon>InvoiceGenerator.cs</DependentUpon>
     </EmbeddedResource>
@@ -265,6 +279,17 @@
     </None>
     <None Include="InventoryDataSet1.xss">
       <DependentUpon>InventoryDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="InventoryDataSet10.xsc">
+      <DependentUpon>InventoryDataSet10.xsd</DependentUpon>
+    </None>
+    <None Include="InventoryDataSet10.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>InventoryDataSet10.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="InventoryDataSet10.xss">
+      <DependentUpon>InventoryDataSet10.xsd</DependentUpon>
     </None>
     <None Include="InventoryDataSet2.xsc">
       <DependentUpon>InventoryDataSet2.xsd</DependentUpon>
