--- a/Inventory/Inventory.csproj
+++ b/Inventory/Inventory.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>Inventory</RootNamespace>
     <AssemblyName>Inventory</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -34,9 +35,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Shared, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="FlashControlV71, Version=1.0.3187.32366, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
+    <Reference Include="Microsoft.ReportViewer.Common, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+    <Reference Include="Microsoft.ReportViewer.WinForms, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,6 +57,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientRecord.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ClientRecord.Designer.cs">
+      <DependentUpon>ClientRecord.cs</DependentUpon>
+    </Compile>
     <Compile Include="FindCustomer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,6 +84,21 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>InventoryDataSet11.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="InventoryDataSet12.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>InventoryDataSet12.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="InventoryDataSet13.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>InventoryDataSet13.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="InventoryDataSet14.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>InventoryDataSet14.xsd</DependentUpon>
     </Compile>
     <Compile Include="InventoryDataSet2.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -211,6 +242,21 @@
     <Compile Include="Master\Tax.Designer.cs">
       <DependentUpon>Tax.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reports\CrystalReport1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CrystalReport1.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reports\Reports.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reports\Reports.Designer.cs">
+      <DependentUpon>Reports.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="ClientRecord.resx">
+      <DependentUpon>ClientRecord.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FindCustomer.resx">
       <DependentUpon>FindCustomer.cs</DependentUpon>
     </EmbeddedResource>
@@ -261,6 +307,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Master\Warehouse.resx">
       <DependentUpon>Warehouse.cs</DependentUpon>
@@ -270,6 +317,13 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Master\Tax.resx">
       <DependentUpon>Tax.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reports\CrystalReport1.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>CrystalReport1.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reports\Reports.resx">
+      <DependentUpon>Reports.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config" />
     <None Include="InventoryDataSet.xsc">
@@ -315,6 +369,39 @@
     </None>
     <None Include="InventoryDataSet11.xss">
       <DependentUpon>InventoryDataSet11.xsd</DependentUpon>
+    </None>
+    <None Include="InventoryDataSet12.xsc">
+      <DependentUpon>InventoryDataSet12.xsd</DependentUpon>
+    </None>
+    <None Include="InventoryDataSet12.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>InventoryDataSet12.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="InventoryDataSet12.xss">
+      <DependentUpon>InventoryDataSet12.xsd</DependentUpon>
+    </None>
+    <None Include="InventoryDataSet13.xsc">
+      <DependentUpon>InventoryDataSet13.xsd</DependentUpon>
+    </None>
+    <None Include="InventoryDataSet13.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>InventoryDataSet13.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="InventoryDataSet13.xss">
+      <DependentUpon>InventoryDataSet13.xsd</DependentUpon>
+    </None>
+    <None Include="InventoryDataSet14.xsc">
+      <DependentUpon>InventoryDataSet14.xsd</DependentUpon>
+    </None>
+    <None Include="InventoryDataSet14.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>InventoryDataSet14.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="InventoryDataSet14.xss">
+      <DependentUpon>InventoryDataSet14.xsd</DependentUpon>
     </None>
     <None Include="InventoryDataSet2.xsc">
       <DependentUpon>InventoryDataSet2.xsd</DependentUpon>
@@ -413,6 +500,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
